stop-gaps removed. pages should be refreshable

--- a/front-end/sentimentbot/src/Components/myProfile/myProfile.css
+++ b/front-end/sentimentbot/src/Components/myProfile/myProfile.css
@@ -170,6 +170,8 @@
 
   .p-tag{
       margin-top: 2rem;
+      width: 80%;
+      margin: 0 auto;
   }
 
   .container-pandb{
